2001-07-22  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (scm_char_set_intersection, scm_char_set_xor): remove
	the compulsory cs1 arguments: all args are optional in final spec.
	* srfi-14.h: declarations updated.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-11.scm, srfi-8.scm: Update copyright notice.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Okay.  Now I got it.  Really.  This time it's fixed.
	Guaranteed. (Maybe)
	
	* srfi-19.scm: Define `current-time' before exporting it.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Fix for bug caused by brain-malfunctioning on my
	side.  Bit sets were handled wrong because I couldn't tell bit
	counts from byte counts.  Also, the bit array should be 256 / 8
	bytes long.  Thank you, Gary!	

	Removed unnecessary protoype for scm_char_set_copy.

2001-07-16  Gary Houston  <ghouston@arglist.com>

	* srfi-14.scm: export string->char-set!, not string-char-set!.

	* srfi-14.c (scm_char_set_ref, scm_char_set_cursor_next,
	scm_end_of_char_set_p): reject negative	cursor values.
	(scm_list_to_char_set, scm_list_to_char_set_x): when reporting
	type error in list component, omit the position (was always 1).

2001-07-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	(scm_char_set_map): Bug-fix: char-set-map was modifying the
	argument instead of the return value.

2001-07-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Allocate correct memory size for charsets (32 bytes),
	use this value for initializing and comparing charsets.
	(scm_char_set_hash): Use ``better'' hash algorithm which produces
	more values.

2001-07-15  Gary Houston  <ghouston@arglist.com>
	
	* srfi-14.c (scm_char_set_hash): recognise 0 instead of #f in the
	opt arg to give default bound, as in final spec.  don't allow
	negative bounds.
	(scm_char_set_hash): bug fix: was overrunning the buffer and
	calculating based on garbage.